--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Darrien Nagel</title>
+    <title>Darrien N Nagel</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
